and now the animate component is done i thing

--- a/style/reset.sass
+++ b/style/reset.sass
@@ -4,4 +4,8 @@
   border: none
   box-sizing: border-box
   outline: none
-  font-family: 'Nunito Sans' sans-serif
+  font-family: 'Nunito Sans', sans-serif
+
+a
+  text-decoration: none
+  color: inherit
