--- a/style/header.sass
+++ b/style/header.sass
@@ -8,5 +8,23 @@ header
   width: 100%
   height: 64px
   z-index: 1000
+  display: flex
+  align-items: center
+  justify-content: space-between
+  box-shadow: 0px 6px 32px -4px rgba(0,0,0,0.1)
+  .logo
+    height: 50%
+    width: auto
+    margin-left: 16px
+    img
+      height: 100%
+  nav
+    ul
+      list-style: none
+      li
+        display: inline-block
+        padding: 0 32px
+        color: #fff
+        font-size: 18px
 body
   margin-top: 64px
