--- a/style/index.sass
+++ b/style/index.sass
@@ -7,11 +7,21 @@
   align-items: center
   justify-content: center
   position: relative
-  &::after
-    content: ""
+  >h1
+    font-size: 56px
+    color: #fff
+    span
+      position: relative
+      display: inline-block
+  .latest
     position: absolute
     width: 100%
-    bottom: -128px
-    height: 256px
-    background-color: $main
-    border-radius: 50%
+    bottom: -30px
+    right: 0
+    .card
+      padding: 16px
+      margin: 16px
+      display: inline-block
+      float: right
+      background-color: #fff
+      box-shadow: 0px 6px 32px 3px rgba(#000, 0.1)
