--- a/style/header.sass
+++ b/style/header.sass
@@ -26,5 +26,21 @@ header
         padding: 0 32px
         color: #fff
         font-size: 18px
+        a
+          position: relative
+          &::after
+            content: ""
+            position: absolute
+            bottom: -4px
+            opacity: 0
+            right: 0
+            background-color: #fff
+            width: 100%
+            height: 2px
+            +transition(0.3s)
+          &:hover
+            &::after
+              bottom: 0
+              opacity: 1
 body
   margin-top: 64px
