--- a/style/vars.sass
+++ b/style/vars.sass
@@ -1,6 +1,7 @@
 $main: #b37feb
 $red: #ff7875
 $blue: #85a5ff
+$dark-bg: #202124
 
 =transition($t)
   transition: all $t cubic-bezier(.25,.8,.25,1)
