--- a/style/index.sass
+++ b/style/index.sass
@@ -7,9 +7,20 @@
   align-items: center
   justify-content: center
   position: relative
+  #bg
+    height: 100%
+    width: 100%
+    position: absolute
+    top: 0
+    left: 0
+    opacity: 0.4
+    overflow: hidden
+    // background-image: url("../static/img/hero-1.jpeg")
   >h1
     font-size: 56px
     color: #fff
+    position: relative
+    z-index: 1
     span
       position: relative
       display: inline-block
@@ -25,3 +36,29 @@
       float: right
       background-color: #fff
       box-shadow: 0px 6px 32px 3px rgba(#000, 0.1)
+
+
+.about
+  background-color: $dark-bg
+  .cards
+    max-width: 960px
+    width: 90%
+    margin: 0 auto
+    padding: 32px 0 16px
+    display: flex
+    align-items: center
+    justify-content: center
+    .card
+      background-color: #fff
+      margin: 8px
+      padding: 8px
+      width: 100%
+      max-width: 300px
+      box-shadow: 0px 6px 32px 3px rgba(#000, 0.5)
+      cursor: pointer
+      text-align: center
+      h1
+        margin-bottom: 4px
+      p
+        font-size: 16px
+        line-height: 1.6em
