--- a/style/index.sass
+++ b/style/index.sass
@@ -62,16 +62,82 @@
       p
         font-size: 16px
         line-height: 1.6em
-
-.brief
-  background-color: #fafafa
-  text-align: center
-  margin: 64px auto
-  max-width: 960px
-  width: 90%
+section
   h1
     font-size: 56px
     margin-bottom: 8px
+    text-align: center
   p
     line-height: 1.6em
     font-size: 20px
+    text-align: center
+
+.brief
+  background-color: #fafafa
+  margin: 64px auto
+  max-width: 960px
+  width: 90%
+
+
+.sponsors
+  background-color: #f1f1f1
+  padding: 16px
+  .inner
+    width: 90%
+    max-width: 960px
+    margin: 0 auto
+  .logos
+    margin-top: 16px
+    display: flex
+    align-items: center
+    justify-content: center
+
+.contact
+  padding: 16px
+  background-color: $dark-bg
+  color: rgba(#fff, 0.85)
+  >p
+    margin-bottom: 16px
+  .cols
+    width: 90%
+    margin: 0 auto
+    display: flex
+    justify-content: center
+    .col
+      width: 50%
+      padding: 16px
+      display: flex
+      flex-wrap: wrap
+      align-items: baseline
+      h2
+        margin: 8px
+        width: 100%
+      >a
+        font-size: 18px
+        margin-bottom: 6px
+        display: block
+        width: 100%
+      input
+        width: calc(50% - 16px)
+      textarea
+        width: calc(100% - 16px)
+        resize: vertical
+      button
+        margin: 8px
+        padding: 12px 16px
+        cursor: pointer
+        background-color: rgba(#fff, 0.85)
+        +transition(0.3s)
+        &:hover
+          background-color: $main
+      input, textarea
+        margin: 8px
+        padding: 12px 16px
+        background-color: transparent
+        color: rgba(#fff, 0.85)
+        border: 3px solid rgba(#fff, 0.85)
+        +transition(0.3s, border-color)
+        &:focus
+          border-color: $main
+      &:nth-child(2)
+        border-left: 1px solid rgba(#fff, 0.2)
