--- a/style/vars.sass
+++ b/style/vars.sass
@@ -3,5 +3,5 @@ $red: #ff7875
 $blue: #85a5ff
 $dark-bg: #202124
 
-=transition($t)
-  transition: all $t cubic-bezier(.25,.8,.25,1)
+=transition($t, $target: all)
+  transition: $target $t cubic-bezier(.25,.8,.25,1)
