--- a/style/index.sass
+++ b/style/index.sass
@@ -50,6 +50,8 @@
     justify-content: center
     .card
       background-color: #fff
+      opacity: 0
+      transform: translateY(-30px)
       margin: 16px
       padding: 8px
       width: 100%
@@ -63,7 +65,7 @@
         font-size: 16px
         line-height: 1.6em
 section
-  h1
+  >h1
     font-size: 56px
     margin-bottom: 8px
     text-align: center
