--- a/style/index.sass
+++ b/style/index.sass
@@ -46,7 +46,7 @@
     margin: 0 auto
     padding: 32px 0 16px
     display: flex
-    align-items: center
+    align-items: stretch
     justify-content: center
     .card
       background-color: #fff
@@ -59,13 +59,16 @@
       box-shadow: 0px 6px 32px 3px rgba(#000, 0.5)
       cursor: pointer
       text-align: center
-      h1
+      img
+        width: 64px
+        height: 64px
+      h2
         margin-bottom: 4px
       p
         font-size: 16px
         line-height: 1.6em
 section
-  >h1
+  h1
     font-size: 56px
     margin-bottom: 8px
     text-align: center
@@ -93,7 +96,10 @@ section
     display: flex
     align-items: center
     justify-content: center
-
+    flex-wrap: wrap
+    img
+      width: 240px
+      margin: 10px
 .contact
   padding: 16px
   background-color: $dark-bg
@@ -143,3 +149,4 @@ section
           border-color: $main
       &:nth-child(2)
         border-left: 1px solid rgba(#fff, 0.2)
+        text-align: center
