--- a/style/index.sass
+++ b/style/index.sass
@@ -38,7 +38,7 @@
       box-shadow: 0px 6px 32px 3px rgba(#000, 0.1)
 
 
-.about
+.home .about
   background-color: $dark-bg
   .cards
     max-width: 960px
