i should eat, i should sleep but eh over working myself is good right

--- a/style/index.sass
+++ b/style/index.sass
@@ -38,7 +38,7 @@
       box-shadow: 0px 6px 32px 3px rgba(#000, 0.1)
 
 
-.home .about
+section.about
   background-color: $dark-bg
   .cards
     max-width: 960px
@@ -67,6 +67,7 @@
       p
         font-size: 16px
         line-height: 1.6em
+
 section
   h1
     font-size: 56px
@@ -78,7 +79,6 @@ section
     text-align: center
 
 .brief
-  background-color: #fafafa
   margin: 64px auto
   max-width: 960px
   width: 90%
