--- a/style/about.sass
+++ b/style/about.sass
@@ -79,19 +79,65 @@
       border-radius: 50%
 
 section.mentors
+  background-color: #fafafa
   >div
     width: 100%
     max-width: none
     padding: 32px
   .mentors
     display: flex
-    align-items: center
     justify-content: center
     flex-wrap: wrap
     .mentor
       max-width: 300px
-      padding: 8px
+      padding: 8px 16px
       text-align: center
+      margin: 8px
+      background-color: #fff
+      box-shadow: 0px 4px 24px -4px rgba(0, 0, 0, 0.1)
+      >p
+        font-size: 14px
       img
         height: 128px
         width: 128px
+        border-radius: 50%
+
+.vex
+  padding: 16px
+  a
+    display: block
+    cursor: pointer
+    padding: 16px
+    position: relative
+    text-align: center
+    max-width: 300px
+    width: 100%
+    margin: 8px auto
+    overflow: hidden
+    border: 4px solid $main
+    color: rgba(#000, 0.85)
+    +transition(0.6s)
+    &::after
+      content: ""
+      position: absolute
+      bottom: 50%
+      left: 50%
+      width: 0
+      height: 0
+      border-radius: 50%
+      background-color: $main
+      z-index: -1
+      +transition(0.6s)
+    &:hover
+      color: rgba(#fff, 0.85)
+      &::after
+        left: calc(50% - 250px)
+        bottom: calc(50% - 250px)
+        width: 500px
+        height: 500px
+
+.purple
+  color: $main
+  text-align: center
+  background-color: $dark-bg
+  padding: 16px
