and now we back to this

--- a/style/index.sass
+++ b/style/index.sass
@@ -41,7 +41,7 @@
 section.about
   background-color: $dark-bg
   .cards
-    max-width: 960px
+    max-width: $section-width
     width: 90%
     margin: 0 auto
     padding: 32px 0 16px
@@ -80,7 +80,7 @@ section
 
 .brief
   margin: 64px auto
-  max-width: 960px
+  max-width: $section-width
   width: 90%
 
 
@@ -89,7 +89,7 @@ section
   padding: 16px
   .inner
     width: 90%
-    max-width: 960px
+    max-width: $section-width
     margin: 0 auto
   .logos
     margin-top: 16px
