--- a/style/blog.sass
+++ b/style/blog.sass
@@ -1,1 +1,13 @@
 @import "vars.sass"
+
+.blog
+  background-color: #fafafa
+  .posts
+    padding: 16px
+    max-width: $section-width
+    margin: 8px auto
+    .card
+      margin: 16px
+      padding: 8px
+      background-color: #fff
+      box-shadow: 0px 4px 12px -4px rgba(0, 0, 0, 0.1)
