--- a/style/blog.sass
+++ b/style/blog.sass
@@ -11,3 +11,20 @@
       padding: 8px
       background-color: #fff
       box-shadow: 0px 4px 12px -4px rgba(0, 0, 0, 0.1)
+
+.blog-post
+  >.content
+    padding: 16px
+    max-width: $section-width
+    margin: 8px auto
+    h1
+      font-size: 4rem
+      font-weight: 300
+      margin-bottom: 8px
+      line-height: 1.6em
+    p
+      font-size: 18px
+      line-height: 1.6em
+      margin-bottom: 32px
+    .by
+      margin-bottom: 32px
