--- a/style/index.sass
+++ b/style/index.sass
@@ -8,9 +8,20 @@
   justify-content: center
   position: relative
   flex-direction: column
+  .bg
+    position: absolute
+    top: 0
+    left: 0
+    width: 100%
+    height: 100%
+    opacity: 0.2
+    background-size: cover
+    background-position: center
   >img
     height: 128px
     margin-bottom: 8px
+    position: relative
+    z-index: 1
   >h1
     font-size: 56px
     color: #fff
