--- a/style/header.sass
+++ b/style/header.sass
@@ -6,41 +6,125 @@ header
   top: 0
   background-color: $main
   width: 100%
-  height: 64px
+  height: 88px
   z-index: 1000
   display: flex
-  align-items: center
-  justify-content: space-between
+  justify-content: flex-end
+  overflow: hidden
   box-shadow: 0px 6px 32px -4px rgba(0,0,0,0.1)
+  +transition(0.3s)
+  +max-width(640px)
+    &.active
+      max-height: 100vh
+      height: 100vh
+      ul
+        height: 100%
+        li
+          pointer-events: auto
+          width: 100%
+          @for $i from 1 through 6
+            &:nth-child(#{$i})
+              transition-delay: 0.3s + $i * 0.2s
   .logo
-    height: 50%
+    height: 56px
     width: auto
     margin-left: 16px
+    position: absolute
+    left: 8px
+    top: 16px
     img
-      height: 100%
+      height: 56px
   nav
     ul
       list-style: none
+      +max-width(640px)
+        position: absolute
+        top: 0
+        left: 0
+        width: 100%
+        height: 0
+        overflow: hidden
+        display: flex
+        justify-content: center
+        flex-direction: column
       li
         display: inline-block
-        padding: 0 32px
         color: #fff
         font-size: 18px
+        +max-width(640px)
+          position: relative
+          pointer-events: none
+          font-size: 32px
+          display: block
+          width: 0
+          overflow: hidden
+          white-space: nowrap
+          transition-delay: 0s
+          margin-bottom: 8px
+          transition: 0.3s all $spline
         a
           position: relative
-          &::after
-            content: ""
-            position: absolute
-            bottom: -4px
-            opacity: 0
-            right: 0
-            background-color: #fff
-            width: 100%
-            height: 2px
-            +transition(0.3s)
-          &:hover
+          padding: 0 32px
+          +min-width(640px)
             &::after
-              bottom: 0
-              opacity: 1
+              content: ""
+              position: absolute
+              bottom: -4px
+              opacity: 0
+              right: 0
+              background-color: #fff
+              width: 100%
+              height: 2px
+              +transition(0.3s)
+            &:hover
+              &::after
+                bottom: 0
+                opacity: 1
+
+.ham
+  height: 56px
+  width: 56px
+  display: none
+  cursor: pointer
+  position: relative
+  z-index: 1000
+  margin: 16px
+  transform: rotate(0)
+  +transition(0.4s)
+  +max-width(640px)
+    display: block
+  span
+    display: block
+    position: absolute
+    left: 0
+    width: 100%
+    height: 2px
+    background-color: #fff
+    transform: rotate(0)
+    &:nth-child(1)
+      top: 9px
+      transition: 0.3s transform $spline, 0.3s top $spline 0.3s
+    &:nth-child(2)
+      +transition(0.3s)
+      top: 27px
+    &:nth-child(3)
+      top: 45px
+      transition: 0.3s transform $spline, 0.3s top $spline 0.3s
+
+
+header.active
+  .ham
+    transform: rotate(180deg)
+    span
+      &:nth-child(1)
+        top: 27px
+        transform: rotate(45deg)
+        transition: 0.3s top $spline, 0.3s 0.3s transform $spline
+      &:nth-child(2)
+        width: 0
+      &:nth-child(3)
+        top: 27px
+        transform: rotate(-45deg)
+        transition: 0.3s top $spline, 0.3s 0.3s transform $spline
 body
-  margin-top: 64px
+  margin-top: 88px
