--- a/style/header.sass
+++ b/style/header.sass
@@ -35,6 +35,8 @@ header
     img
       height: 56px
   nav
+    display: flex
+    align-items: center
     ul
       list-style: none
       +max-width(640px)
