--- a/style/about.sass
+++ b/style/about.sass
@@ -31,6 +31,8 @@
     margin-bottom: 64px
     .card
       width: calc(50% - 32px)
+      +max-width(800px)
+        width: calc(100% - 32px)
       margin: 16px
       background-color: #fff
       box-shadow: 0px 4px 12px -4px rgba(0, 0, 0, 0.1)
