another blog post

--- a/style/outreach.sass
+++ b/style/outreach.sass
@@ -1,5 +1,9 @@
 @import "vars.sass"
 
+.outreach
+  max-width: 100%
+  overflow: hidden
+
 .outreach-item
   border-bottom: 1px solid rgba(#000, 0.1)
   padding: 8px 32px 8px 8px
@@ -8,6 +12,7 @@
   display: flex
   align-items: center
   justify-content: center
+  max-width: 90%
   img
     width: 300px
   .txt
