--- a/style/blog.sass
+++ b/style/blog.sass
@@ -15,7 +15,7 @@
 .blog-post
   >.content
     padding: 16px
-    max-width: $section-width
+    max-width: 720px
     margin: 8px auto
     h1
       font-size: 4rem
@@ -24,7 +24,7 @@
       line-height: 1.6em
     p
       font-size: 18px
-      line-height: 1.6em
+      line-height: 1.8em
       margin-bottom: 24px
     .by
       margin-bottom: 32px
