--- a/style/index.sass
+++ b/style/index.sass
@@ -30,6 +30,10 @@
     flex-wrap: nowrap
     text-align: center
     z-index: 1
+    +max-width(640px)
+      font-size: 42px
+    +max-width(520px)
+      font-size: 36px
     span
       position: relative
       display: inline-block
@@ -59,6 +63,8 @@ section.about
     display: flex
     align-items: stretch
     justify-content: center
+    +max-width(800px)
+      flex-wrap: wrap
     .card
       background-color: #fff
       opacity: 0
@@ -82,11 +88,17 @@ section.about
 section
   h1
     font-size: 56px
+    +max-width(640px)
+      font-size: 42px
+    +max-width(520px)
+      font-size: 36px
     margin-bottom: 8px
     text-align: center
   p
     line-height: 1.6em
     font-size: 20px
+    +max-width(640px)
+      font-size: 18px
     text-align: center
 
 .brief
@@ -111,6 +123,7 @@ section
     img
       width: 240px
       margin: 10px
+
 .contact
   padding: 16px
   background-color: $dark-bg
@@ -122,8 +135,10 @@ section
     margin: 0 auto
     display: flex
     justify-content: center
+    +max-width(840px)
+      flex-wrap: wrap
     .col
-      width: 50%
+      width: 100%
       padding: 16px
       display: flex
       flex-wrap: wrap
@@ -131,6 +146,8 @@ section
       h2
         margin: 8px
         width: 100%
+        +max-width(840px)
+          text-align: center
       >a
         font-size: 18px
         margin-bottom: 6px
@@ -138,6 +155,8 @@ section
         width: 100%
       input
         width: calc(50% - 16px)
+        +max-width(500px)
+          width: 100%
       textarea
         width: calc(100% - 16px)
         resize: vertical
@@ -159,5 +178,6 @@ section
         &:focus
           border-color: $main
       &:nth-child(2)
-        border-left: 1px solid rgba(#fff, 0.2)
         text-align: center
+        +min-width(840px)
+          border-left: 1px solid rgba(#fff, 0.2)
