--- a/style/header.sass
+++ b/style/header.sass
@@ -24,7 +24,7 @@ header
           width: 100%
           @for $i from 1 through 6
             &:nth-child(#{$i})
-              transition-delay: 0.3s + $i * 0.2s
+              transition-delay: 0.3s + $i * 0.1s
   .logo
     height: 56px
     width: auto
@@ -53,7 +53,7 @@ header
         display: inline-block
         color: #fff
         font-size: 18px
-        padding: 0 32px
+        margin: 0 32px
         +max-width(640px)
           position: relative
           pointer-events: none
@@ -64,7 +64,7 @@ header
           white-space: nowrap
           transition-delay: 0s
           margin-bottom: 8px
-          transition: 0.3s all $spline
+          +transition(0.4s)
         a
           position: relative
           +min-width(640px)
