--- a/style/teams.sass
+++ b/style/teams.sass
@@ -16,6 +16,8 @@
     position: relative
     cursor: pointer
     z-index: 1
+    +max-width(800px)
+      width: 100%
     >img
       opacity: 0.2
       z-index: -1
