--- a/style/outreach.sass
+++ b/style/outreach.sass
@@ -26,8 +26,11 @@
   .txt
     p
       margin: 0 16px 16px
+      text-align: left
       +max-width(480px)
         font-size: 14px
+      +max-width(760px)
+        text-align: center  
     h2
       font-size: 32px
       margin: 16px
