--- a/style/header.sass
+++ b/style/header.sass
@@ -21,7 +21,7 @@ header
         height: 100%
         li
           pointer-events: auto
-          width: 100%
+          max-width: 100%
           @for $i from 1 through 6
             &:nth-child(#{$i})
               transition-delay: 0.3s + $i * 0.1s
@@ -55,16 +55,17 @@ header
         font-size: 18px
         margin: 0 32px
         +max-width(640px)
+          max-width: 0
           position: relative
           pointer-events: none
           font-size: 32px
-          display: block
-          width: 0
+          display: inline-block
+          width: auto
           overflow: hidden
           white-space: nowrap
           transition-delay: 0s
-          margin-bottom: 8px
-          +transition(0.4s)
+          margin: 16px 32px
+          +transition(0.6s)
         a
           position: relative
           +min-width(640px)
