ok last update i promise

--- a/style/index.sass
+++ b/style/index.sass
@@ -120,6 +120,7 @@ section
     align-items: center
     justify-content: center
     flex-wrap: wrap
+    overflow: hidden
     img
       width: 240px
       margin: 10px
