--- a/style/about.sass
+++ b/style/about.sass
@@ -77,8 +77,8 @@ section
     background-color: #fff
     padding: 16px
     margin: 16px
-    max-width: 360px
-    width: 50%
+    max-width: 540px
+    width: calc(50% - 32px)
     box-shadow: 0px 4px 12px -4px rgba(0, 0, 0, 0.3)
     display: flex
     align-items: center
