--- a/style/blog.sass
+++ b/style/blog.sass
@@ -14,17 +14,31 @@
 
 .blog-post
   >.content
-    padding: 16px
+    padding: 32px 16px 16px
     max-width: 720px
     margin: 8px auto
-    h1
-      font-size: 4rem
-      font-weight: 300
-      margin-bottom: 8px
-      line-height: 1.6em
+    .by
+      h1
+        font-size: 4rem
+        font-weight: 300
+        line-height: 1.6em
+        margin-bottom: 32px
+        &::after
+          display: none
+    h1, h2, h3, h4, h5, h6
+      margin-bottom: 0.5em
+      position: relative
+      &::after
+        content: ""
+        position: absolute
+        display: block
+        height: 2px
+        background-color: $main
+        width: 64px
+        bottom: -2px
+        left: 0
     p
       font-size: 18px
       line-height: 1.8em
-      margin-bottom: 24px
+      margin-bottom: 1.8em
     .by
-      margin-bottom: 32px
