i am very slowly dying

--- a/style/about.sass
+++ b/style/about.sass
@@ -102,6 +102,7 @@ section.mentors
     display: flex
     justify-content: center
     flex-wrap: wrap
+    overflow: hidden
     .mentor
       max-width: 300px
       padding: 8px 16px
