--- a/style/index.sass
+++ b/style/index.sass
@@ -178,7 +178,7 @@ section
         +transition(0.3s, border-color)
         &:focus
           border-color: $main
-      &:nth-child(2)
+      &.txt
         text-align: center
-        +min-width(840px)
-          border-left: 1px solid rgba(#fff, 0.2)
+        // +min-width(840px)
+        //   border-left: 1px solid rgba(#fff, 0.2)
