--- a/style/about.sass
+++ b/style/about.sass
@@ -87,6 +87,8 @@ section
     opacity: 0
     +max-width(960px)
       width: 100%
+    p
+      width: 100%
     h3
       text-align: center
       margin-bottom: 8px
