--- a/style/teams.sass
+++ b/style/teams.sass
@@ -33,10 +33,12 @@
       opacity: 0
       transform: scale(0.8)
       +transition(0.3s)
-      img
-        width: 32px
-        height: 32px
-
+      font-size: 18px
+      padding: 8px
+      p
+        display: inline-block
+        padding: 8px
+        margin: 0 8px
     &:hover
       >img
         opacity: 0.3
